[gd_scene load_steps=14 format=3 uid="uid://co85woqnvtmtd"]

[ext_resource type="Script" path="res://scn/props/black_door.gd" id="1_d3u2n"]
[ext_resource type="Texture2D" uid="uid://buwjqnhilwt0b" path="res://assets/black_door.png" id="2_qms1c"]
[ext_resource type="Script" path="res://src/interactable_area_2d.gd" id="3_hctcq"]
[ext_resource type="PackedScene" uid="uid://irvn03j1ln04" path="res://scn/props/black_door_eye.tscn" id="3_lvebc"]
[ext_resource type="AudioStream" uid="uid://wkj8q6lsj2d3" path="res://assets/audio/door_close.wav" id="4_u50bk"]
[ext_resource type="Script" path="res://src/sprites/prop_sprite_2d.gd" id="6_t7agf"]
[ext_resource type="PackedScene" uid="uid://tbm0xchyrgv1" path="res://assets/models/door_frame.glb" id="7_cda1j"]
[ext_resource type="PackedScene" uid="uid://c7uwg7vhdn3d3" path="res://assets/models/black_door.glb" id="8_ieb8e"]
[ext_resource type="Script" path="res://src/photo_sensative.gd" id="9_yi4ko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ceby"]
size = Vector2(32, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7v8tb"]
size = Vector2(15, 111.938)

[sub_resource type="CircleShape2D" id="CircleShape2D_oy4ku"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cql0a"]
radius = 25.02

[node name="BlackDoor" type="StaticBody2D" node_paths=PackedStringArray("interactable", "sprite", "door_collision", "door_3d", "sfx_closed", "eye")]
script = ExtResource("1_d3u2n")
interactable = NodePath("InteractableArea2D")
sprite = NodePath("Sprite2D")
door_collision = NodePath("CollisionShape2D")
door_3d = NodePath("DoorModel")
sfx_closed = NodePath("SFXClosed")
eye = NodePath("BlackDoorEye")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_qms1c")
hframes = 3

[node name="BlackDoorEye" parent="." instance=ExtResource("3_lvebc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_1ceby")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-24.5, -40)
shape = SubResource("RectangleShape2D_7v8tb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(24.5, -39.9688)
shape = SubResource("RectangleShape2D_7v8tb")

[node name="DoorFrame" type="Sprite2D" parent="."]
visible = false
script = ExtResource("6_t7agf")
model = ExtResource("7_cda1j")

[node name="DoorModel" type="Sprite2D" parent="."]
visible = false
position = Vector2(-15, -2)
script = ExtResource("6_t7agf")
model = ExtResource("8_ieb8e")

[node name="PhotoSensative" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("9_yi4ko")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhotoSensative"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_oy4ku")

[node name="InteractableArea2D" type="Area2D" parent="."]
position = Vector2(0, -9)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_hctcq")
text = "door"
time = 1200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea2D"]
shape = SubResource("CircleShape2D_cql0a")

[node name="SFXClosed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_u50bk")
volume_db = -9.0
bus = &"Diegetic"
